--- a/index.Rmd
+++ b/index.Rmd
@@ -63,32 +63,48 @@ In 2020, the covid-19 epidemic has swept the world, and the United States is no 
 ----
 
 # Data & API
+<br>
+LA_raw_crime：The API comes from Los Angeles city data. The data collection includes all data from January 2017 to October 7, 2020. (https://data.lacity.org/resource/2nrs-mtv8.json)
 
- LA_raw_crime：The API comes from Los Angeles city data. The data collection includes all data from January 2017 to October 7, 2020. (https://data.lacity.org/resource/2nrs-mtv8.json)
 
 <br>
 
 
- LA_raw_covid：Including all the data from March 10, 2020 to October 7, 2020 in Los Angeles County. In order to facilitate the comparison of the impact of the emergence of covid-19 on the psychological and economic aspects of residents, which may lead to an increase in the crime rate, I Set the numbers of covid-19 data before March to 0. The data comes from County of Los Angeles Public Health. (https://raw.githubusercontent.com/Icygrey/pm566_lab12_hw5/main/latimes-place-totals.csv)
+LA_raw_covid：Including all the data from March 10, 2020 to October 7, 2020 in Los Angeles County. In order to facilitate the comparison of the impact of the emergence of covid-19 on the psychological and economic aspects of residents, which may lead to an increase in the crime rate, I Set the numbers of covid-19 data before March to 0. The data comes from County of Los Angeles Public Health. (https://raw.githubusercontent.com/Icygrey/pm566_lab12_hw5/main/latimes-place-totals.csv)
 
 <br>
 
 ----
 
+
+# Method and Process
 <br>
 
-# I. Workflow
+The Method and Process is as follows:
 
-The basic workflow is as follows:
-
-1.Create a time series axis of crime frequency from 2017 to 2020 and compare them.
+1.Create a time series axis of crime frequency from 2017 to 2020 and compare them: 
 <br>
-2.Create interactive hotmaps to find areas with high incidence of covid-19 and crime, and try to find connections.
+Extract the data of 2017, 2018, 2019 and 2020 from Lacity.og, clean and organize the data, then use data.table to calculate the cumulative crime frequency, and finally use plotly to make a time series graph.
 <br>
-3.Text mining to view the most frequent types of crimes in 2019 and 2020.
+<br>
+2.Create interactive hotmaps to find areas with high incidence of covid-19 and crime, and try to find connections: 
+<br>
+Clean the data, extract all the latitude and longitude in the data set, then approximate the latitude and longitude, calculate the frequency, and finally use leaflet to make a map.
+<br>
 
 <br>
+3.Text mining to view the most frequent types of crimes in 2019 and 2020: 
+<br>
+Use regular expressions to extract the keywords in the crime description, then extract the most frequent words, and use ggplot to make a bar graph.
 
+
+<br>
+<br>
+----
+
+# Results
+
+<br>
 
 ## 1.Create a time series
 
